--- a/libdmp-common/CMakeLists.txt
+++ b/libdmp-common/CMakeLists.txt
@@ -23,6 +23,29 @@ else(MINGW)
 	add_library(dmp-common SHARED ${dmp-common-sources})
 endif(MINGW)
 
+if(MINGW)
+	target_link_libraries(dmp-common 
+		/home/dennis/projects/mxe/usr/x86_64-w64-mingw32/lib/gstreamer-1.0/libgstcoreelements.a
+		/home/dennis/projects/mxe/usr/x86_64-w64-mingw32/lib/gstreamer-1.0/libgsttcp.a
+		/home/dennis/projects/mxe/usr/x86_64-w64-mingw32/lib/gstreamer-1.0/libgstplayback.a
+		/home/dennis/projects/mxe/usr/x86_64-w64-mingw32/lib/gstreamer-1.0/libgstvolume.a
+		/home/dennis/projects/mxe/usr/x86_64-w64-mingw32/lib/gstreamer-1.0/libgstaudioconvert.a
+		/home/dennis/projects/mxe/usr/x86_64-w64-mingw32/lib/gstreamer-1.0/libgstaudioresample.a
+		/home/dennis/projects/mxe/usr/x86_64-w64-mingw32/lib/gstreamer-1.0/libgstaudioparsers.a
+		/home/dennis/projects/mxe/usr/x86_64-w64-mingw32/lib/gstreamer-1.0/libgstautodetect.a
+		/home/dennis/projects/mxe/usr/x86_64-w64-mingw32/lib/gstreamer-1.0/libgstlame.a
+		-lmp3lame
+		-lgsttag-1.0
+		-lgstvideo-1.0
+		-lgstpbutils-1.0
+		-lgstaudio-1.0
+		-lgio-2.0
+		-ldnsapi
+		-lgzip
+		-lz
+	)
+endif(MIGNW)
+
 include_directories(../libdmp-library/include)
 
 find_package(Boost COMPONENTS system thread REQUIRED)
