--- a/qt-client/CMakeLists.txt
+++ b/qt-client/CMakeLists.txt
@@ -116,7 +116,7 @@ include_directories(SYSTEM ${Qt5Core_INCLUDE_DIRS})
 
 set(CMAKE_CXX_FLAGS "${Qt5Widgets_EXECUTABLE_COMPILE_FLAGS} ${Qt5Gui_EXECUTABLE_COMPILE_FLAGS} ${Qt5Core_EXECUTABLE_COMPILE_FLAGS}")
 if(MINGW)
-	set(Qt5Widgets_LIBRARIES ${Qt5Widgets_LIBRARIES} ${Qt5Gui_LIBRARIES} ${Qt5Core_LIBRARIES} jpeg png pcre16 /home/dennis/projects/mxe/usr/x86_64-w64-mingw32/qt5/plugins/platforms/libqwindows.a)
+	set(Qt5Widgets_LIBRARIES ${Qt5Widgets_LIBRARIES} ${Qt5Gui_LIBRARIES} ${Qt5Core_LIBRARIES} jpeg png pcre16 ${Qt5Core_DIR}/../../../plugins/platforms/libqwindows.a)
 endif(MINGW)
 target_link_libraries(qt-client ${Qt5Widgets_LIBRARIES} ${Qt5Gui_LIBRARIES} ${Qt5Core_LIBRARIES})
 
@@ -128,6 +128,5 @@ qt5_use_modules(qt-client Widgets)
 
 if(MINGW)
 	add_definitions("-DBOOST_THREAD_USE_LIB=1 -mms-bitfields -DPCRE_STATIC")
-	#target_link_libraries(qt-client tcpclientsrc)
-	target_link_libraries(qt-client pthread ws2_32 mswsock ffi imm32 opengl32 freetype bz2 /home/dennis/projects/mxe/usr/x86_64-w64-mingw32/lib/gstreamer-1.0/libgstcoreelements.a)
+	target_link_libraries(qt-client pthread ws2_32 mswsock ffi imm32 opengl32 freetype bz2)
 endif(MINGW)
