Changes the pipeline to allow mutliple clients to connect.
It works but gstreamer timestamps are not yet synchronising causes some emergent behaviour

--- a/dmp-server/CMakeLists.txt
+++ b/dmp-server/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 2.8)
 add_executable(dmp-server main.cpp
                           dmp_server.hpp dmp_server.cpp
                           dmp_radio.hpp dmp_radio.cpp
+                          dmp_radio_endpoint.hpp dmp_radio_endpoint.cpp
                           client_endpoint.hpp client_endpoint.cpp
                           dmp_server_interface.hpp
 )
