When an exception occurs in the DmpClient, send a message about it to the main thread using QObject::startTimer() and let the main thread display the error in a dialog. (Remove client_stopped(), it serves no purpose.)

--- a/qt-client/CMakeLists.txt
+++ b/qt-client/CMakeLists.txt
@@ -40,11 +40,13 @@ find_package(Qt5Widgets REQUIRED)
 my_qt5_wrap_ui(QtGeneratedHeaders
 	dmp_client_gui.ui
 	dmp_client_connect_dialog.ui
+	dmp_client_error_dialog.ui
 )
 
 qt5_wrap_cpp(QtGeneratedSources
 	dmp_client_gui.hpp
 	dmp_client_connect_dialog.hpp
+	dmp_client_error_dialog.hpp
 	dmp_client_gui_search_bar.hpp
 	dmp_client_gui_menu_bar.hpp
 	dmp_client_gui_search_results.hpp
@@ -61,6 +63,7 @@ set(DmpClientSources
 	playlists_model_qt_adapter.hpp playlists_model_qt_adapter.cpp
 	dmp_client_gui.hpp dmp_client_gui.cpp
 	dmp_client_connect_dialog.hpp dmp_client_connect_dialog.cpp
+	dmp_client_error_dialog.hpp dmp_client_error_dialog.cpp
 	dmp_client_gui_search_bar.hpp dmp_client_gui_search_bar.cpp
 	dmp_client_gui_menu_bar.hpp dmp_client_gui_menu_bar.cpp
 	dmp_client_gui_search_results.hpp dmp_client_gui_search_results.cpp
