Moves all network related code to a seperate library. libdmp-common was getting a mess.
Also cleaned up the network code a bit with regard to boost::asio
includes and namespaces.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ add_definitions(${warnings} -g3 -Wno-shadow)
 
 add_subdirectory(libdmp-library)
 add_subdirectory(libdmp-common)
+add_subdirectory(libdmp-net)
 
 add_subdirectory(dmp-server)
 add_subdirectory(dmp-client)
