--- a/qt-client/CMakeLists.txt
+++ b/qt-client/CMakeLists.txt
@@ -88,6 +88,9 @@ target_link_libraries(qt-client dmp-library)
 include_directories(${CMAKE_SOURCE_DIR}/libdmp-common)
 target_link_libraries(qt-client dmp-common)
 
+include_directories(${CMAKE_SOURCE_DIR}/libdmp-net)
+target_link_libraries(qt-client dmp-net)
+
 find_package(Boost COMPONENTS system serialization program_options REQUIRED)
 include_directories(SYSTEM ${Boost_INCLUDE_DIRS})
 target_link_libraries(qt-client ${Boost_LIBRARIES})
