--- a/libdmp-library/src/CMakeLists.txt
+++ b/libdmp-library/src/CMakeLists.txt
@@ -12,25 +12,12 @@ else(MINGW)
 endif(MINGW)
 
 find_package(Boost COMPONENTS system filesystem regex serialization REQUIRED)
-include_directories(${Boost_INCLUDE_DIRS})
-target_link_libraries(dmp-library ${Boost_LIBRARIES})
-
 find_package(TagLib REQUIRED)
-include_directories(${TAGLIB_INCLUDES})
-target_link_libraries(dmp-library ${TAGLIB_LIBRARIES})
-
-if(MINGW)
-	target_link_libraries(dmp-library z icudt51)
-	add_definitions("-DTAGLIB_STATIC")
-endif(MINGW)
-
 find_package(ICU REQUIRED)
 
 set(BUNDLE_TYPE "static" CACHE STRING
   "ICU resource bundle type; possible values are: common, static and common")
 string (TOUPPER ${BUNDLE_TYPE} _BUNDLE_TYPE)
-
-include_directories(ICU_INCLUDE_DIRS)
 
 if (NOT ${_BUNDLE_TYPE} STREQUAL "SHARED")
   add_definitions (-DUSE_STATIC_RESOURCES)
@@ -40,7 +27,24 @@ if (${_BUNDLE_TYPE} STREQUAL "COMMON")
   add_definitions (-DUSE_COMMON_RESOURCES)
 endif (${_BUNDLE_TYPE} STREQUAL "COMMON")
 
+target_include_directories(dmp-library SYSTEM
+	PRIVATE ${Boost_INCLUDE_DIRS}
+	PRIVATE ${TAGLIB_INCLUDES}
+	PRIVATE ${ICU_INCLUDE_DIRS}
+)
+
+target_include_directories(dmp-library
+	INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/../include
+)
+
+target_link_libraries(dmp-library ${Boost_LIBRARIES})
+target_link_libraries(dmp-library ${TAGLIB_LIBRARIES})
 target_link_libraries(dmp-library ${ICU_LIBRARIES})
+
+if(MINGW)
+	target_link_libraries(dmp-library z icudt51)
+	add_definitions("-DTAGLIB_STATIC")
+endif(MINGW)
 
 if(USE_GPERF)
     target_link_libraries(dmp-library "-lprofiler")
