--- a/dmp-server/CMakeLists.txt
+++ b/dmp-server/CMakeLists.txt
@@ -8,7 +8,7 @@ add_executable(dmp-server main.cpp
                           dmp_server_interface.hpp
 )
 
-find_package(Boost COMPONENTS thread system REQUIRED)
+find_package(Boost COMPONENTS system REQUIRED)
 
 target_include_directories(dmp-server SYSTEM
 	PRIVATE ${Boost_INCLUDE_DIRS}
@@ -27,5 +27,5 @@ endif(USE_GPERF)
 
 if(MINGW)
 	add_definitions("-DBOOST_THREAD_USE_LIB=1 -mms-bitfields -DPCRE_STATIC")
-	target_link_libraries(dmp-server pthread ws2_32 mswsock ffi)
+	target_link_libraries(dmp-server pthread ws2_32 mswsock ffi /home/dennis/projects/mxe/usr/x86_64-w64-mingw32.shared/lib/gstreamer-1.0/libgsttcp.dll.a)
 endif(MINGW)
