--- a/libdmp-library/src/CMakeLists.txt
+++ b/libdmp-library/src/CMakeLists.txt
@@ -5,11 +5,7 @@ file(GLOB dmp-library-headers ../include/*.hpp)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules")
 
-if(MINGW)
-	add_library(dmp-library STATIC ${dmp-library-sources} ${dmp-library-headers})
-else(MINGW)
-	add_library(dmp-library SHARED ${dmp-library-sources} ${dmp-library-headers})
-endif(MINGW)
+add_library(dmp-library STATIC ${dmp-library-sources} ${dmp-library-headers})
 
 find_package(Boost COMPONENTS system filesystem regex serialization REQUIRED)
 find_package(TagLib REQUIRED)
@@ -37,14 +33,11 @@ target_include_directories(dmp-library
 	INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/../include
 )
 
-target_link_libraries(dmp-library ${Boost_LIBRARIES})
-target_link_libraries(dmp-library ${TAGLIB_LIBRARIES})
-target_link_libraries(dmp-library ${ICU_LIBRARIES})
-
-if(MINGW)
-	target_link_libraries(dmp-library z icudt51)
-	add_definitions("-DTAGLIB_STATIC")
-endif(MINGW)
+target_link_libraries(dmp-library
+	PRIVATE ${Boost_LIBRARIES}
+	PRIVATE ${TAGLIB_LIBRARIES}
+	PRIVATE ${ICU_LIBRARIES}
+)
 
 if(USE_GPERF)
     target_link_libraries(dmp-library "-lprofiler")
