--- a/qt-client/CMakeLists.txt
+++ b/qt-client/CMakeLists.txt
@@ -113,5 +113,5 @@ endif(USE_GPERF)
 if(MINGW)
 	add_definitions("-DBOOST_THREAD_USE_LIB=1 -mms-bitfields -DPCRE_STATIC")
 	target_link_libraries(qt-client pthread ws2_32 mswsock ffi imm32 opengl32 freetype bz2)
-	target_link_libraries(qt-client jpeg png pcre16 ${Qt5Core_DIR}/../../../plugins/platforms/libqwindows.a)
+	target_link_libraries(qt-client jpeg png pcre16)
 endif(MINGW)
