Splitted a boost-fusion-wrapper library located in common to a seperate library.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ ENDIF(UNIX AND NOT APPLE)
 add_definitions(${warnings} -g3 -Wno-shadow)
 
 add_subdirectory(libdmp-library)
+add_subdirectory(libboost-fusion-utils)
 add_subdirectory(libdmp-common)
 add_subdirectory(libdmp-net)
 
