Splitted debug library code from libdmp-common in a seperate library.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,8 @@ ENDIF(UNIX AND NOT APPLE)
 
 add_definitions(${warnings} -g3 -Wno-shadow)
 
+add_subdirectory(libdbg)
+
 add_subdirectory(libdmp-library)
 add_subdirectory(libboost-fusion-utils)
 add_subdirectory(libdmp-common)
