Some small things
Removes debug output
Adds logic to build boost::variants with 20+ types in boost 1.55
Small tweaks to the cmakelists

--- a/libboost-fusion-utils/CMakeLists.txt
+++ b/libboost-fusion-utils/CMakeLists.txt
@@ -10,7 +10,7 @@ set(boost-fusion-utils-sources
 
 add_library(boost-fusion-utils STATIC ${boost-fusion-utils-sources})
 
-set_target_properties(boost-fusion-utils PROPERTIES LINKER_LANGUAGE C)
+set_target_properties(boost-fusion-utils PROPERTIES LINKER_LANGUAGE CXX)
 
 find_package(Boost REQUIRED)
 
