--- a/libdmp-net/CMakeLists.txt
+++ b/libdmp-net/CMakeLists.txt
@@ -13,6 +13,13 @@ add_library(dmp-net STATIC ${dmp-net-sources})
 
 find_package(Boost COMPONENTS system REQUIRED)
 
+#Increasing the maximum number types in a boost::variant.
+#Boost 1.56 will introduce boost.variant with variadic templates so this is a workaround untill boost 1.56 comes out.
+if(NOT (${Boost_MAJOR_VERSION} GREATER 0 AND ${Boost_MINOR_VERSION} GREATER 55))
+	set(boost_variant_workaround BOOST_MPL_CFG_NO_PREPROCESSED_HEADERS;BOOST_MPL_LIMIT_LIST_SIZE=30;BOOST_MPL_LIMIT_VECTOR_SIZE=30)
+	target_compile_definitions(dmp-net PUBLIC "${boost_variant_workaround}")
+endif()
+
 target_include_directories(dmp-net SYSTEM
 	PRIVATE ${Boost_INCLUDE_DIRS}
 )
