--- a/libdmp-common/CMakeLists.txt
+++ b/libdmp-common/CMakeLists.txt
@@ -1,4 +1,4 @@
-CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
+cmake_minimum_required(VERSION 2.8.12)
 
 set(dmp-common-sources
 	gstreamer_base.hpp gstreamer_base.cpp
