--- a/libdmp-library/tests/CMakeLists.txt
+++ b/libdmp-library/tests/CMakeLists.txt
@@ -1,5 +1,4 @@
-
-#include_directories(../include)
+cmake_minimum_required(VERSION 2.8.12)
 
 add_executable(test1 test1.cpp)
 target_link_libraries(test1
