--- a/libdmp-common/CMakeLists.txt
+++ b/libdmp-common/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 2.8.12)
 set(dmp-common-sources
 	gstreamer_base.hpp gstreamer_base.cpp
 	number_pool.hpp number_pool.cpp
+	radio_state.hpp radio_state.cpp
 	playlist.hpp
 )
 
