--- a/qt-client/CMakeLists.txt
+++ b/qt-client/CMakeLists.txt
@@ -115,6 +115,17 @@ endif(USE_GPERF)
 
 if(MINGW)
 	add_definitions("-DBOOST_THREAD_USE_LIB=1 -mms-bitfields -DPCRE_STATIC")
-	target_link_libraries(qt-client pthread ws2_32 mswsock ffi imm32 opengl32 freetype bz2)
-	target_link_libraries(qt-client jpeg png pcre16)
+	target_link_libraries(qt-client
+		PRIVATE pthread
+		PRIVATE ws2_32
+		PRIVATE mswsock
+		PRIVATE ffi
+		PRIVATE imm32
+		PRIVATE opengl32
+		PRIVATE freetype
+		PRIVATE bz2
+		PRIVATE jpeg
+		PRIVATE png
+		PRIVATE pcre16
+	)
 endif(MINGW)
