Added a start to ODBc++

--- a/dmp-server/CMakeLists.txt
+++ b/dmp-server/CMakeLists.txt
@@ -1,21 +1,37 @@
 cmake_minimum_required(VERSION 2.8.12)
 
-add_executable(dmp-server main.cpp
-                          dmp_server.hpp dmp_server.cpp
-                          dmp_radio.hpp dmp_radio.cpp
-                          dmp_radio_endpoint.hpp dmp_radio_endpoint.cpp
-                          client_endpoint.hpp client_endpoint.cpp
-                          dmp_server_interface.hpp
+find_package(Boost COMPONENTS system REQUIRED)
+find_package(ODBc++ COMPONENTS sqlite REQUIRED)
+
+ODB_compile(odb_sources
+	user.hpp
 )
 
-find_package(Boost COMPONENTS system REQUIRED)
+add_executable(dmp-server
+	main.cpp
+	dmp_server.hpp dmp_server.cpp
+	dmp_radio.hpp dmp_radio.cpp
+	dmp_radio_endpoint.hpp dmp_radio_endpoint.cpp
+	client_endpoint.hpp client_endpoint.cpp
+	dmp_server_interface.hpp
+	database.hpp database.cpp
+	database_version.hpp
+	database_migration.hpp
+	user.hpp user.cpp
+	${odb_sources}
+)
 
 target_include_directories(dmp-server SYSTEM
 	PRIVATE ${Boost_INCLUDE_DIRS}
 )
 
+target_include_directories(dmp-server
+	PRIVATE ${ODBc++_INCLUDE_DIRECTORIES}
+)
+
 target_link_libraries(dmp-server
 	PRIVATE ${Boost_LIBRARIES}
+	PRIVATE ${ODBc++_LIBRARIES}
 	PRIVATE dmp-library
 	PRIVATE dmp-common
 	PRIVATE dmp-net
