Split the Delegate system to use smaller more functionality contained delegates.
Also made a user login and register system. I should have split these commits.
But forgot to commit the latter first and now the changes are to intertwined.

--- a/dmp-client/CMakeLists.txt
+++ b/dmp-client/CMakeLists.txt
@@ -13,6 +13,9 @@ set(DmpClientSources
 	dmp_client_interface.hpp
 	delegator.hpp
 	playlist_ui_delegate.hpp
+	radio_list_ui_delegate.hpp
+	search_result_ui_delegate.hpp
+	search_bar_ui_delegate.hpp
 )
 
 add_library(dmp-client STATIC ${DmpClientSources} ${DmpClientResources})
