Replaces FindGlib.cmake with a simpler version.

--- a/libdmp-common/CMakeLists.txt
+++ b/libdmp-common/CMakeLists.txt
@@ -19,16 +19,18 @@ find_package(GObject REQUIRED)
 target_link_libraries(dmp-common
 	PRIVATE ${GSTREAMER_LIBRARIES}
 	PRIVATE ${GSTREAMER_BASE_LIBRARIES}
-	PRIVATE ${GLIB2_LIBRARIES}
+	PRIVATE ${Glib_LIBRARIES}
 	PRIVATE ${GOBJECT_LIBRARIES}
 	PRIVATE ${Boost_LIBRARIES}
 	PRIVATE boost-fusion-utils
 	PRIVATE dbg
 )
 
+message(STATUS "lololol: ${Glib_INCLUDE_DIRS}")
+
 target_include_directories(dmp-common SYSTEM
 	PUBLIC ${GSTREAMER_INCLUDE_DIRS}
-	PUBLIC ${GLIB2_INCLUDE_DIRS}
+	PUBLIC ${Glib_INCLUDE_DIRS}
 	PRIVATE ${GOBJECT_INCLUDE_DIR}
 	PRIVATE ${Boost_INCLUDE_DIRS}
 )
