started to work on a better connect dialog

--- a/qt-client/CMakeLists.txt
+++ b/qt-client/CMakeLists.txt
@@ -113,6 +113,7 @@ target_link_libraries(qt-client
 	PRIVATE dmp-library
 	PRIVATE dmp-common
 	PRIVATE dmp-net
+	PRIVATE dmp-config
 	PRIVATE dbg
 )
 
