Fixes the OSX build

--- a/libdbg/CMakeLists.txt
+++ b/libdbg/CMakeLists.txt
@@ -7,10 +7,17 @@ set(dbg-sources
 	core_dump.hpp core_dump.cpp
 )
 
-add_library(dbg STATIC ${dbg-sources})
+find_package(Boost COMPONENTS thread system REQUIRED)
+
+add_library(dbg SHARED ${dbg-sources})
 
 target_include_directories(dbg
 	INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}
+	PRIVATE ${Boost_INCLUDE_DIRS}
+)
+
+target_link_libraries(dbg
+	PRIVATE ${Boost_LIBRARIES}
 )
 
 if(USE_GPERF)
